Feature/13 5 profiles (#17)
* refactored URI conversion and password input
* Added ListCommand incl. test
Updated requirements and user_guide.md for password entry

Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>