@@ -2,6 +2,7 @@ package com.exasol.bucketfs.client;
 
 import static com.exasol.bucketfs.BucketConstants.DEFAULT_BUCKET;
 import static com.exasol.bucketfs.BucketConstants.DEFAULT_BUCKETFS;
+import static com.exasol.bucketfs.Lines.lines;
 import static java.util.Arrays.asList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
@@ -11,7 +12,8 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
@@ -40,32 +42,34 @@ class BucketFsClientExecutableJarIT {
     @Test
     void executableFailsWithoutArguments() throws Exception {
         assertProcessFails(run(), ExitCode.USAGE, equalTo(""), equalTo(lines("Missing required subcommand", //
-                "Usage: bfs [COMMAND]", //
+                "Usage: bfsc [COMMAND]", //
                 "Exasol BucketFS client", //
                 "Commands:", //
                 "  cp  Copy SOURCE to DEST, or multiple SOURCE(s) to DIRECTORY", //
+                "  ls  List contents of PATH", //
                 "")));
     }
 
     @Test
-    void copyFileFailsForMissingPassword(@TempDir final Path tempDir) throws Exception {
+    void copyFileFailsForWrongPassword(@TempDir final Path tempDir) throws Exception {
         final String filename = "upload.txt";
         final Path sourceFile = tempDir.resolve(filename);
         Files.writeString(sourceFile, "content");
         final String destination = getDefaultBucketUriToFile(filename);
         final Process process = run("cp", sourceFile.toString(), destination);
-        assertProcessFails(process, ExitCode.SOFTWARE, equalTo(""),
+        writeToStdIn(process, "wrong password");
+        assertProcessFails(process, ExitCode.SOFTWARE, equalTo(PasswordReader.PROMPT),
                 startsWith("E-BFSJ-3: Access denied trying to upload "));
     }
 
     @Test
     void copyFileFailsForNonExistingFile() throws Exception {
-        final Path sourceFile = Paths.get("non-existing-file");
+        final Path sourceFile = Path.of("non-existing-file");
         final String destination = getDefaultBucketUriToFile(sourceFile.toString());
         final String password = EXASOL.getClusterConfiguration().getDefaultBucketWritePassword();
-        final Process process = run("cp", "--password", sourceFile.toString(), destination);
+        final Process process = run("cp", sourceFile.toString(), destination);
         writeToStdIn(process, password);
-        assertProcessFails(process, ExitCode.SOFTWARE, equalTo("Enter value for --password (password): "),
+        assertProcessFails(process, ExitCode.SOFTWARE, equalTo(PasswordReader.PROMPT),
                 equalTo(lines("E-BFSC-2: Unable to upload. No such file or directory: 'non-existing-file'", "")));
     }
 
@@ -96,7 +100,7 @@ class BucketFsClientExecutableJarIT {
     }
 
     private Path getJarFile() {
-        final Path jar = Paths.get("target/bfsc-1.0.0.jar").toAbsolutePath();
+        final Path jar = Path.of("target/bfsc-1.0.0.jar").toAbsolutePath();
         if (!Files.exists(jar)) {
             fail("Jar " + jar + " not found. Run 'mvn package' to build it.");
         }
@@ -109,7 +113,7 @@ class BucketFsClientExecutableJarIT {
         if (!success) {
             final String stdOut = readString(process.getInputStream());
             final String stdErr = readString(process.getErrorStream());
-            fail("Process did not finish within timeout of " + timeout + ". Std out: '" + stdOut + "'', std error: '"
+            fail("Process did not finish within timeout of " + timeout + ". Std out: '" + stdOut + "', std error: '"
                     + stdErr + "'");
         }
     }
@@ -128,13 +132,12 @@ class BucketFsClientExecutableJarIT {
 
     private String readString(final InputStream stream) {
         try {
+            if (stream.available() < 1) {
+                return "";
+            }
             return new String(stream.readAllBytes(), StandardCharsets.UTF_8);
         } catch (final IOException exception) {
             throw new UncheckedIOException(exception);
         }
-    }
-
-    private String lines(final String... lines) {
-        return String.join(System.lineSeparator(), lines);
     }
 }
