@@ -2,6 +2,7 @@ package com.exasol.bucketfs.client;
 
 import static com.exasol.bucketfs.BucketConstants.DEFAULT_BUCKET;
 import static com.exasol.bucketfs.BucketConstants.DEFAULT_BUCKETFS;
+import static com.exasol.bucketfs.Lines.lines;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.startsWith;
@@ -9,149 +10,118 @@ import static org.itsallcode.junit.sysextensions.AssertExit.assertExitWithStatus
 import static picocli.CommandLine.ExitCode.OK;
 import static picocli.CommandLine.ExitCode.SOFTWARE;
 
-import java.nio.file.*;
-import java.util.concurrent.TimeoutException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 import org.itsallcode.io.Capturable;
 import org.itsallcode.junit.sysextensions.ExitGuard;
 import org.itsallcode.junit.sysextensions.SystemErrGuard;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
-import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
-
-import com.exasol.bucketfs.*;
-import com.exasol.config.BucketConfiguration;
-import com.exasol.containers.ExasolContainer;
-import com.exasol.containers.ExasolService;
-
-import picocli.CommandLine;
 
 @ExtendWith(ExitGuard.class)
 @ExtendWith(SystemErrGuard.class)
-@Testcontainers
 class CopyCommandIT {
-    @Container
-    private static ExasolContainer<? extends ExasolContainer<?>> EXASOL = new ExasolContainer<>()//
-            .withRequiredServices(ExasolService.BUCKETFS).withReuse(true);
+
+    private static final IntegrationTestSetup SETUP = new IntegrationTestSetup();
+
+    @AfterAll
+    static void after() {
+        SETUP.stop();
+    }
 
     // [impl->dsn~copy-command-copies-file-from-bucket~1]
     @Test
-    void testCopyFileFromBucketToLocalFile(@TempDir final Path tempDir) throws Exception {
+    void copyFileFromBucketToLocalFile(@TempDir final Path tempDir) throws Exception {
         final String expectedContent = "the content";
         final String filename = "dir_test.txt";
         final Path destinationFile = tempDir.resolve(filename);
-        uploadStringContent(expectedContent, filename);
-        final String source = getDefaultBucketUriToFile(filename);
+        SETUP.uploadStringContent(expectedContent, filename);
+        final String source = SETUP.getDefaultBucketUriToFile(filename);
         assertExitWithStatus(OK, () -> BFSC.create("cp", source, destinationFile.toString()).run());
         assertThat(Files.readString(destinationFile), equalTo(expectedContent));
     }
 
-    private String getDefaultBucketUriToFile(final String filename) {
-        return getBucketFsUri(DEFAULT_BUCKETFS, DEFAULT_BUCKET, filename);
-    }
-
-    private String getBucketFsUri(final String serviceName, final String bucketName, final String pathInBucket) {
-        return "bfs://" + getHost() + ":" + getMappedBucketFsPort() + "/" + bucketName + "/" + pathInBucket;
-    }
-
-    private void uploadStringContent(final String content, final String pathInBucket)
-            throws InterruptedException, BucketAccessException, TimeoutException {
-        getDefaultBucket().uploadStringContentNonBlocking(content, pathInBucket);
-        waitUntilObjectSynchronized();
-    }
-
-    @SuppressWarnings("java:S2925")
-    private void waitUntilObjectSynchronized() throws InterruptedException {
-        Thread.sleep(500);
-    }
-
-    private UnsynchronizedBucket getDefaultBucket() {
-        final BucketConfiguration bucketConfiguration = EXASOL.getClusterConfiguration() //
-                .getBucketFsServiceConfiguration(DEFAULT_BUCKETFS) //
-                .getBucketConfiguration(DEFAULT_BUCKET);
-        return WriteEnabledBucket.builder() //
-                .ipAddress(getHost()) //
-                .port(getMappedBucketFsPort()) //
-                .serviceName("bfsdefault") //
-                .name("default") //
-                .writePassword(bucketConfiguration.getWritePassword()) //
-                .build();
-    }
-
-    private Integer getMappedBucketFsPort() {
-        return EXASOL.getMappedPort(EXASOL.getDefaultInternalBucketfsPort());
-    }
-
-    private String getHost() {
-        return EXASOL.getHost();
-    }
-
-    // [itest->dsn~sub-command-requires-hidden-password~1]
+    // [itest->dsn~sub-command-requires-hidden-password~2]
     @Test
-    void testCopyFileFromBucketToFileWithoutProtocol(@TempDir final Path tempDir) throws Exception {
+    void copyFileFromBucketToFileWithoutProtocol(@TempDir final Path tempDir) throws Exception {
         final String expectedContent = "downloaded content";
         final String filename = "dir_test.txt";
         final Path destinationFile = tempDir.resolve(filename);
-        uploadStringContent(expectedContent, filename);
-        final String source = getDefaultBucketUriToFile(filename);
+        SETUP.uploadStringContent(expectedContent, filename);
+        final String source = SETUP.getDefaultBucketUriToFile(filename);
         assertExitWithStatus(OK, () -> BFSC.create("cp", source, destinationFile.toString()).run());
         assertThat(Files.readString(destinationFile), equalTo(expectedContent));
     }
 
     // [itest->dsn~copy-command-copies-file-to-bucket~1]
-    // [itest->dsn~sub-command-requires-hidden-password~1]
+    // [itest->dsn~sub-command-requires-hidden-password~2]
     @Test
-    void testCopyFileWithoutProtocolToBucket(@TempDir final Path tempDir) throws Exception {
+    void copyFileWithoutProtocolToBucket(@TempDir final Path tempDir) throws Exception {
+        verifyUpload(tempDir, null, SETUP.getDefaultBucket().getWritePassword());
+    }
+
+    @Test
+    void copyWithPassswordFromProfile(@TempDir final Path tempDir) throws Exception {
+        final Path configFile = tempDir.resolve(".bucketfs-client-config");
+        Files.writeString(configFile, lines("[default]", "password=" + SETUP.getDefaultBucket().getWritePassword()));
+        verifyUpload(tempDir, configFile, "");
+    }
+
+    private void verifyUpload(final Path tempDir, final Path configFile, final String interactivePassword)
+            throws Exception {
         final String expectedContent = "uploaded content";
         final String filename = "upload.txt";
         final Path sourceFile = tempDir.resolve(filename);
         Files.writeString(sourceFile, expectedContent);
-        final String destination = getDefaultBucketUriToFile(filename);
-        final String password = getDefaultBucket().getWritePassword();
-        assertExitWithStatus(OK,
-                () -> BFSC.create("cp", "-p", sourceFile.toString(), destination).feedStdIn(password).run());
-        waitUntilObjectSynchronized();
-        assertThat(getDefaultBucket().downloadFileAsString(filename), equalTo(expectedContent));
+        final String destination = SETUP.getDefaultBucketUriToFile(filename);
+        assertExitWithStatus(OK, () -> BFSC.create("cp", sourceFile.toString(), destination) //
+                .feedStdIn(interactivePassword) //
+                .withConfigFile(configFile) //
+                .run());
+        SETUP.waitUntilObjectSynchronized();
+        assertThat(SETUP.getDefaultBucket().downloadFileAsString(filename), equalTo(expectedContent));
     }
 
     @Test
-    void testCopyNonExistingFileWithoutProtocolToBucket() throws Exception {
+    void copyNonExistingFileWithoutProtocolToBucket() throws Exception {
         final String filename = "non-existing-local-file";
-        final Path sourceFile = Paths.get(filename);
-        final String destination = getDefaultBucketUriToFile(filename);
-        final String password = getDefaultBucket().getWritePassword();
+        final Path sourceFile = Path.of(filename);
+        final String destination = SETUP.getDefaultBucketUriToFile(filename);
+        final String password = SETUP.getDefaultBucket().getWritePassword();
         assertExitWithStatus(SOFTWARE,
-                () -> BFSC.create("cp", "-p", sourceFile.toString(), destination).feedStdIn(password).run());
+                () -> BFSC.create("cp", sourceFile.toString(), destination).feedStdIn(password).run());
     }
 
     // [itest->dsn~copy-command-copies-file-to-bucket~1]
     @Test
-    void testCopyWithMalformedSourceBucketFsUrlRaisesError(final Capturable stream) {
+    void copyWithMalformedSourceBucketFsUrlRaisesError(final Capturable stream) {
         final BFSC client = BFSC.create("cp", "bfs://illegal/", "some_file");
         stream.capture();
-        assertExitWithStatus(CommandLine.ExitCode.SOFTWARE, () -> client.run());
-        assertThat(stream.getCapturedData(), startsWith("E-BFSC-4: Illegal BucketFS source URL: 'bfs://illegal/'"));
+        assertExitWithStatus(SOFTWARE, () -> client.run());
+        assertThat(stream.getCapturedData(), startsWith("E-BFSC-4: Invalid BucketFS source URL: 'bfs://illegal/'"));
     }
 
     // [itest->dsn~copy-command-copies-file-to-bucket~1]
     @Test
-    void testCopyWithMalformedDestinationBucketFsUrlRaisesError(final Capturable stream) {
+    void copyWithMalformedDestinationBucketFsUrlRaisesError(final Capturable stream) {
         final BFSC client = BFSC.create("cp", "some_file", "bfs://illegal/");
         stream.capture();
-        assertExitWithStatus(CommandLine.ExitCode.SOFTWARE, () -> client.run());
+        assertExitWithStatus(SOFTWARE, () -> client.run());
         assertThat(stream.getCapturedData(),
-                startsWith("E-BFSC-3: Illegal BucketFS destination URL: 'bfs://illegal/'"));
+                startsWith("E-BFSC-3: Invalid BucketFS destination URL: 'bfs://illegal/'"));
     }
 
     // [itest->dsn~copy-command-copies-file-from-bucket~1]
     @Test
-    void testDownloadingNonexistentObjectRaisesError(final Capturable stream) {
-        final String nonexistentObjectUri = getBucketFsUri(DEFAULT_BUCKETFS, DEFAULT_BUCKET, "/nonexistent-object");
+    void downloadingNonexistentObjectRaisesError(final Capturable stream) {
+        final String nonexistentObjectUri = SETUP.getBucketFsUri(DEFAULT_BUCKETFS, DEFAULT_BUCKET,
+                "/nonexistent-object");
         final BFSC client = BFSC.create("cp", nonexistentObjectUri, "some_file");
         stream.capture();
-        assertExitWithStatus(CommandLine.ExitCode.SOFTWARE, () -> client.run());
+        assertExitWithStatus(SOFTWARE, () -> client.run());
         assertThat(stream.getCapturedData(), startsWith("E-BFSJ-2: File or directory not found trying to download"));
     }
 }
